--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html ng-app="myApp">
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-  <title>Simple app</title>
-  
+  <title>myBox</title>
+
   <link rel="stylesheet" href="css/foundation.min.css" />
   <link rel="stylesheet" href="css/app.css" />
 </head>
