Send reply to backend api

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <section class="top-bar-section">
       <ul class="right">
+        <li ng-show="loading"><img src="images/spinner_32.gif"></li>
         <li>
           <a href="#/"><img src="images/home.gif"/></a>
         </li>
